--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "cropperjs": "^1.6.2",
     "currency.js": "^2.0.4",
     "fontawesome": "^5.6.3",
     "gsap": "^3.12.5",
